<resources>
    <string name="app_name">Riksdagskollen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="party_sd">Sverigedemokraterna</string>
    <string name="party_m">Moderaterna</string>
    <string name="party_s">Socialdemokraterna</string>
    <string name="party_c">Centerpartiet</string>
    <string name="party_v">Vänsterpartiet</string>
    <string name="party_l">Liberalerna</string>
    <string name="party_mp">Miljöpartiet</string>
    <string name="party_kd">Kristdemokraterna</string>
    <string name="no_party">Politiska Vildar</string>
    <string name="parties">Partier</string>
    <string name="misc">Övrigt</string>
    <string name="in_gov">I Riksdagen</string>
    <string name="decisions">Riksdagsbeslut</string>
    <string name="representatives">Ledamöter</string>
    <string name="news">Aktuellt</string>
    <string name="votes">Voteringar</string>
    <string name="about">Om appen</string>
    <string name="search_nav">Dokumentsök</string>
    <string name="feedback">Ge oss feedback</string>
    <string name="saved_docs">Sparade dokument</string>
    <string name="debate_nav">Debatt</string>
    <string name="twitter_nav">Riksdagen på Twitter</string>
    <string name="prot">Kammarprotokoll</string>
    <string name="vote">Votering</string>
    <string name="vote_yes">Ja</string>
    <string name="vote_no">Nej</string>
    <string name="vote_novote">Avstående</string>
    <string name="vote_absent">Frånvarande</string>
    <string name="vote_partyvotes_title">"Röstfördelning:"</string>
    <string name="about_title">Om Riksdagskollen</string>
    <string name="about_body">Riksdagskollen är en android-applikation utvecklad av Gustav Aaro och Oscar Andell för att hålla koll på vad som händer i vår riksdag. All källkod finns tillgänglig på GitHub. Har du några idéer? Bidra gärna!\n\nSamtliga dokument och bilder är hämtade från riksdagens egna API: data.riksdagen.se</string>
    <string name="contact_information">Alla nyheter, parti-dokument, kammarprotokoll och information om ledamöter, voteringar och debatter tillhandahålls av Riksdagen. För frågor kring dessa typer av innehåll som visas i appen, vänligen kontakta Riksdagen. För frågor, buggrapporter, funktionsförfrågningar eller annat som rör appen, kontakta någon av utvecklarna nedan.</string>
    <string name="github">https://github.com/OAndell/Riksdagskollen</string>
    <string name="riksdagen_contact">https://riksdagen.se/sv/Kontakt/</string>
    <string name="view_reply_button">Denna fråga har besvarats: Läs svar</string>
    <string name="no_reply_tip">Denna fråga har ännu inte besvarats. Klicka på klockan i menyn om du vill få en notis när ett svar publiceras.</string>
    <string name="rep_feed_tab_name">Ledamotsflöde</string>
    <string name="no_content_string">Det verkar inte finnat något här.</string>

    <string name="feedback_question">Tycker du om Riksdagskollen?</string>
    <string name="yes">Ja!</string>
    <string name="no">Nej</string>
    <string name="ask_later">Fråga mig senare</string>

    <string name="feedback_positive_question">Vad roligt! Skulle du vilja hjälpa oss och lämna ett betyg på Google Play?</string>
    <string name="feedback_negative_question">Okej, skulle du vilja lämna feedback till oss så att vi kan förbättra din upplevelse?</string>
    <string name="absolutely">Absolut!</string>
    <string name="no_thanks">Nej tack</string>
    <string name="maybe_later">Kanske senare</string>

    <string name="s_website">www.socialdemokraterna.se</string>
    <string name="m_website">www.moderaterna.se</string>
    <string name="sd_website">www.sd.se</string>
    <string name="mp_website">www.mp.se</string>
    <string name="c_website">www.centerpartiet.se</string>
    <string name="v_website">www.vansterpartiet.se</string>
    <string name="l_website">www.liberalerna.se</string>
    <string name="kd_website">www.kristdemokraterna.se</string>

    <string name="dev_email_1">oscar@andell.eu</string>
    <string name="dev_email_2">gustav.aaro@gmail.com</string>

    <string name="s_ideology">Demokratisk socialism, Socialdemokrati, Tredje vägens politik, Feminism</string>
    <string name="m_ideology">Liberalkonservatism, Marknadsliberalism</string>
    <string name="sd_ideology">Nationalkonservatism, Socialkonservatism, Nationalism, Euroskepticism</string>
    <string name="mp_ideology">Grön ideologi, Ekologism, Feminism</string>
    <string name="c_ideology">Liberalism, Socialliberalism, Grön ideologi, Decentralism, Liberalfeminism</string>
    <string name="v_ideology">Socialism, Feminism, Grön ideologi/Ekologism, Euroskepticism</string>
    <string name="l_ideology">Socialliberalism, Liberalfeminism</string>
    <string name="kd_ideology">Kristdemokrati, Socialkonservatism</string>


    <string name="rate_question">Vad tycker du om det här förslaget?</string>
    <string name="good_prop">Bra förslag</string>
    <string name="bad_prop">Dåligt förslag</string>
    <string name="likebar_text">% av rösterna gillar detta</string>
    <string name="play_statement"><u>Spela upp detta anförande</u></string>

    <string-array name="update_intervals_entries">
        <item>30 minuter</item>
        <item>1 timme</item>
        <item>2 timmar</item>
        <item>3 timmar</item>
        <item>6 timmar</item>
        <item>8 timmar</item>
        <item>12 timmar</item>
        <item>24 timmar</item>
    </string-array>

    <string-array name="update_intervals_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>360</item>
        <item>480</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
