<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:text="@string/vote_yes"
            android:textAlignment="center"
            android:textColor="?mainTitleTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:text="@string/vote_no"
            android:textAlignment="center"
            android:textColor="?mainTitleTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:text="@string/vote_novote"
            android:textAlignment="center"
            android:textColor="?mainTitleTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/vote_absent"
            android:textAlignment="center"
            android:textColor="?mainTitleTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/vote_result_chart_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

