<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardBackgroundColor="?cardViewBackgroundColor"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/feedback_question"
            android:textColor="?mainTitleTextColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/positive_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/yes"
                    android:textColor="?mainTitleTextColor" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/negative_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/no"
                    android:textColor="?mainTitleTextColor" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/neutral_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingRight="16dp"
                android:background="@android:color/transparent"
                android:gravity="right|center_vertical"
                android:text="@string/ask_later"
                android:textColor="?mainTitleTextColor" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>