<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/act_doc_reader_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/rate_question"
        android:textColor="?attr/mainTitleTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:background="?mainTitleTextColor" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/like_dialog_dislike_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:background="?buttonBackgroundDrawable"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/bad_prop"
            android:textColor="?attr/buttonColor"
            android:textSize="12sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/like_dialog_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:background="?buttonBackgroundDrawable"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/good_prop"
            android:textColor="?attr/buttonColor"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>


</LinearLayout>