<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBackgroundColor">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/riksdagskollen_logo_wide" />

        <TextView
            android:id="@+id/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text='@string/about_body'
            android:textColor="?attr/mainBodyTextColor"
            android:textSize="17sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:text="GitHub:"
                android:textColor="?attr/mainTitleTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/github_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical|start"
                android:maxLines="2"
                android:text="@string/github"
                android:lines="1"
                android:textColor="?attr/mainBodyTextColor"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:text="Twitter:"
                android:textColor="?attr/mainTitleTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/twitter_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical|start"
                android:maxLines="2"
                android:text="\@Riksdagskollen"
                android:textColor="?attr/mainBodyTextColor"
                android:textSize="15sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Kontaktinformation"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/mainTitleTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:text="@string/contact_information"
            android:textColor="?attr/mainBodyTextColor"
            android:textSize="15sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|start"
                android:text="Utvecklare:"
                android:textColor="?attr/mainTitleTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|start"
                    android:text="Oscar Andell:"
                    android:textColor="?attr/mainTitleTextColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/email_dev_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical|start"
                    android:maxLines="2"
                    android:text="@string/dev_email_1"
                    android:lines="1"
                    android:textColor="?attr/mainBodyTextColor"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|start"
                    android:text="Gustav Aaro:"
                    android:textColor="?attr/mainTitleTextColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/email_dev_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical|start"
                    android:maxLines="2"
                    android:text="@string/dev_email_2"
                    android:lines="1"
                    android:textColor="?attr/mainBodyTextColor"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|start"
                android:text="Riksdagen:"
                android:textColor="?attr/mainTitleTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|start"
                    android:text="Webbsida:"
                    android:textColor="?attr/mainTitleTextColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/riksdagen_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical|start"
                    android:maxLines="2"
                    android:text="@string/riksdagen_contact"
                    android:lines="1"
                    android:textColor="?attr/mainBodyTextColor"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/show_licenses_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="?buttonBackgroundDrawable"
            android:padding="8dp"
            android:text="Visa licenser för öppen källkod"
            android:textColor="?attr/buttonColor" />


        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textColor="?attr/mainBodyTextColor"
            android:text="Version X.Y" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>